# hornlab-waveguide-mesher

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md  builder-invariants.md  change-guide.md  config-schema.md  geometry-contract.md  public-api.md  review-decisions-2026-07-05.md  wg_feature_matrix.md
examples/: osse-freestanding.toml  rosse-enclosure.toml
hornlab-geometry/: README.md  package.json
hornlab-geometry/src/: edgeTopology.js  expression.js  index.js  meshIntegrity.js  params.js  pipeline.js  pointGridExtractor.js  quality.js  tags.js
hornlab-geometry/tests/: geometry-cli-smoke.test.js
hornlab_mesher/: __init__.py  cli.py  config_builder.py  config_parser.py  cost.py  density.py  geometry.py  geometry_client.py  mesher.py  normals.py  profile_common.py  profile_formulas.py  profile_morph.py  profile_sampling.py  profiles.py  tags.py  viewport.py
hornlab_mesher/builders/: __init__.py  _occ.py  axisymmetric.py  cabinet.py  enclosure.py  lookup_waveguide.py  osse_waveguide.py  point_grid.py  point_grid_dispatch.py  (+7 more)
tests/: test_ath_reference_parity.py  test_circsym_meridian.py  test_cli.py  test_cost.py  test_density_contract.py  test_experimental_cabinet.py  test_icw.py  test_icw_config_coverage.py  test_icw_coverage.py  test_icw_gene_basis.py  test_icw_manufacturability.py  test_icw_mesh.py  test_icw_shape_modes.py  test_lookup_waveguide.py  test_mesher_smoke.py  test_mm_mesh_contract.py  test_orientation_validation.py  test_osse_waveguide.py  test_point_grid_contract.py  test_profile_morph_gcurve.py  test_rosse_waveguide.py
(+31 files in other folders)
